[package]
name = "numwit"
description = "witness types and operations for numbers which are positive or negative (but not zero)"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
num = "0.4.0"
serde = "1.0.152"
thiserror = "1.0.38"
